Fix status icon clipping
Make the svg overflow visible to prevent rectangle shaped path clipping over the icons

--- a/app/styles/app/modules/status-icon.sass
+++ b/app/styles/app/modules/status-icon.sass
@@ -5,6 +5,7 @@
     stroke-linecap: round
     stroke-linejoin: round
     stroke-miterlimit: 10
+    overflow: visible
 
 .status-icon
   @extend %icon
